--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>design-pattern</module>
         <module>algorithm</module>
         <module>redis</module>
+        <module>aviator</module>
     </modules>
 
     <build>
