--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>algorithm</module>
         <module>redis</module>
         <module>aviator</module>
+        <module>lambda</module>
     </modules>
 
     <build>
