--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>redis</module>
         <module>aviator</module>
         <module>lambda</module>
+        <module>drools</module>
     </modules>
 
     <build>
